// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pds-focus() > should return correct css for opts: { offset: '3px', borderRadius: '6px' } 1`] = `
"/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* TBD: $color-skeleton: #f7f7f7; */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
div {
  border-radius: 6px;
}
div:focus {
  outline: 2px solid #1a44ea;
  outline-offset: 3px;
}
div:focus:not(:focus-visible) {
  outline-color: transparent;
}"
`;

exports[`pds-focus() > should return correct css for opts: { offset: 'none', borderRadius: 'medium' } 1`] = `
"/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* TBD: $color-skeleton: #f7f7f7; */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
div {
  border-radius: 6px;
}
div:focus {
  outline: 2px solid #1a44ea;
  outline-offset: 0;
}
div:focus:not(:focus-visible) {
  outline-color: transparent;
}"
`;

exports[`pds-focus() > should return correct css for opts: { offset: 'small', borderRadius: 'small' } 1`] = `
"/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* TBD: $color-skeleton: #f7f7f7; */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
div {
  border-radius: 4px;
}
div:focus {
  outline: 2px solid #1a44ea;
  outline-offset: 2px;
}
div:focus:not(:focus-visible) {
  outline-color: transparent;
}"
`;

exports[`pds-focus() > should return correct css for opts: {} 1`] = `
"/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* TBD: $color-skeleton: #f7f7f7; */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
/* alias (deprecated) */
div {
  border-radius: 4px;
}
div:focus {
  outline: 2px solid #1a44ea;
  outline-offset: 2px;
}
div:focus:not(:focus-visible) {
  outline-color: transparent;
}"
`;
